final changes made...i think

--- a/HomePagePastProblems.html
+++ b/HomePagePastProblems.html
@@ -2,16 +2,22 @@
 <html>
 <head>
     <title>Past Problems</title>
+    <link rel='stylesheet' href='Programming.css'>
+        <link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
 </head>
 <body>
-   <h1>Past Problems</h2>
+   <h1>Problems From Past Years</h1>
    <h2>Take a look at some of our previous problems</h2>
-   <a href="file:///C:/Users/Matt/Documents/Senior%20Semester%201/CSIS%20390/csis390-project1/Problem1">Be There, And Be More Than Square</a><br><br>
-   <a href="file:///C:/Users/Matt/Documents/Senior%20Semester%201/CSIS%20390/csis390-project1/Problem2">Simplified Poker</a><br><br>
-   <a href="file:///C:/Users/Matt/Documents/Senior%20Semester%201/CSIS%20390/csis390-project1/Problem3">Polygon Labeling</a><br><br>
-   <a href="file:///C:/Users/Matt/Documents/Senior%20Semester%201/CSIS%20390/csis390-project1/Problem4">Four-Digit Number Cycler</a><br><br>
-   <a href="file:///C:/Users/Matt/Documents/Senior%20Semester%201/CSIS%20390/csis390-project1/Problem5">Sums Away</a>
+    <nav id="nav2">
+    <ul>
+        <li><a href="Problem1.html">Be There, And Be More Than Square</a></li>
+        <li><a href="Problem2.html">Simplified Poker</a></li>
+        <li><a href="Problem3.html">Polygon Labeling</a></li>
+        <li><a href="Problem4.html">Four-Digit Number Cycler</a></li>
+        <li><a href="Problem5.html">Sums Away</a></li>
+    </ul>  
+    </nav>
 </body>
 <footer>
-</footer>
+    </footer>
 </html>
