--- a/PastPictures.html
+++ b/PastPictures.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title>Pictures</title>
+    <link rel='stylesheet' href='Programming.css'>
+        <link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body id="ppt">
     <h1>Pictures of Past Contests</h1>
-    <table>
+    <table id="ttp">
         <tr>
             <td><img src="DSC_0325.JPG" alt="0325" style="width:300px;height:200px;"></td>
             <td><img src="DSC_0327.JPG" alt="0327" style="width:300px;height:200px;"></td>
