--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
         <link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <section id="main">
         <h1>29th Annual Siena College Programming Contest</h1>
-        <nav>
+        <nav id="nav1">
         <ol align="center">
             <!-- Just some temp links for now. Will be replaced when all pages are made-->
             <li>
-                <a href="file:///Users/drewpintus/Documents/Page1.html">Past Winners</a>
+                <a href="winners.html">Past Winners</a>
             </li>
             <li>
-                <a href="file:///Users/drewpintus/Documents/Page2.html">Past Problems</a>
+                <a href="HomePagePastProblems.html">Past Problems</a>
             </li>
             <li>
-                <a href="file:///Users/drewpintus/Documents/Page3.html">Photo Gallary</a>
+                <a href="PastPictures.html">Photo Gallary</a>
             </li>
             <li>
-            <a href="file:///Users/drewpintus/Documents/Page4.html">Registration Form</a>
+            <a href="register.html">Registration Form</a>
             </li>
             <li>
-                <a href="file:///Users/drewpintus/Documents/Page5.html">Survey</a>
+                <a href="Survey.html">Survey</a>
             </li>
         </ol>
         </nav>
@@ -33,5 +34,7 @@
         attend and allow local high students to meet Siena students, network with faculty, eat great pizza, and of course…program!
         To register, click the registration form above.</p>
         <footer>Design by Drew Pintus, Matt Roberts, and Morgan Mintzer</footer>
+        </section>
+        
     </body>
 </html>
