--- a/winners.html
+++ b/winners.html
@@ -4,11 +4,15 @@
 	<meta charset="utf-8">
 	<title>top 3 Winners Since 1986</title>
 	<h1>The BEST of the Best</h1>
+    <link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='Programming.css'>
 </head>
 <body>
-	<h2>The schools that made it on this list won the Siena College Coding Contest.</h2>
-<div>	
-	<ul>
+    <link rel='stylesheet' href='Programming.css'>
+    <h2>The schools that made it on this list won the Siena College Coding Contest.</h2>
+<div id="winnermain">	
+<div id="div1">
+    <ul>
 		<h3>2015</h3>
 		<li>Niskayuna A</li>
 		<li>Shenendehowa B</li>
@@ -60,7 +64,7 @@
 		<li>Shaker A</li>
 	</ul>
 </div>
-<div>
+<div id="div2">
 	<ul>
 		<h3>2005</h3>
 		<li>Dalton</li>
@@ -110,7 +114,7 @@
 		<li>BH-BL</li>
 	</ul>
 </div>
-<div>
+<div id="div3">
 	<ul>
 		<h3>1995</h3>
 		<li>Johnstown</li>
@@ -162,5 +166,6 @@
 		<li>Shaker</li>
 		<li>Mohonasen</li>
 	</ul>
+    </div>
 </div>
 </body>
