fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="HomePagePastProblems.html">Past Problems</a>
             </li>
             <li>
-                <a href="PastPictures.html">Photo Gallary</a>
+                <a href="PastPictures.html">Photo Gallery</a>
             </li>
             <li>
             <a href="register.html">Registration Form</a>
